# zapdb

./: .gitignore  Cargo.toml  Dockerfile  IMPROVEMENTS.md  README.md  test_aggregation.wal  test_foreign_key_constraint.wal  test_joins.wal  test_new_data_types.wal  test_not_null_constraint.wal  test_sharding.wal  test_transactions.wal  test_transactions_rollback.wal  test_unique_constraint.wal
examples/: example.rs  sharding_example.rs
src/: encryption.rs  lib.rs  main.rs  network.rs  networking.rs  optimizer.rs  sharding.rs  zapdb.rs
tests/: mod.rs  test_aggregation.rs  test_db.rs  test_joins.rs  test_new_data_types.rs  test_transactions.rs
