[package]
name = "zapdb"
version = "1.0.0"
authors = ["Smartlinuxcoder"]
edition = "2021"
description = "Lightweight sql-like database"
readme = "README.md"
repository = "https://github.com/Smartlinuxcoder/zapdb"
license-file = "LICENSE"
keywords = ["database", "db", "in-memory"]

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
flate2 = "1.0"
rs_merkle = "1.2.0"
sha3 = "0.10.8"

[[example]]
name = "example"
path = "examples/example.rs"

[[test]]
name = "test_db"
path = "tests/test_db.rs"
