[package]
name = "zapdb"
version = "1.0.0"
authors = ["Smartlinuxcoder"]
edition = "2021"
description = "Lightweight sql-like database"
readme = "README.md"
repository = "https://github.com/Smartlinuxcoder/zapdb"
license-file = "LICENSE"
keywords = ["database", "db", "in-memory"]

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
rand = "0.8.5"
flate2 = "1.0"
rs_merkle = "1.2.0"
aes-gcm = "0.10.3"
blake3 = "1.5.1"
sha3 = "0.10.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
serde_json = "1.0"

[[example]]
name = "example"
path = "examples/example.rs"

[[test]]
name = "test_db"
path = "tests/test_db.rs"

[[test]]
name = "test_transactions"
path = "tests/test_transactions.rs"

[[test]]
name = "test_new_data_types"
path = "tests/test_new_data_types.rs"
